@@ -1,0 +1,46 @@
+rup_mag,rup_rake,dist_rrup,site_vs30,result_type,pga
+6.5,0,2.9864,750,TOTAL_STDDEV,0.39 
+6.5,0,2.9864,760,TOTAL_STDDEV,0.39 
+6.5,0,2.9864,1500,TOTAL_STDDEV,0.39 
+6.5,0,9.954,750,TOTAL_STDDEV,0.39 
+6.5,0,9.954,760,TOTAL_STDDEV,0.39 
+6.5,0,9.954,1500,TOTAL_STDDEV,0.39 
+6.5,0,29.977,750,TOTAL_STDDEV,0.48415 
+6.5,0,29.977,760,TOTAL_STDDEV,0.50397 
+6.5,0,29.977,1500,TOTAL_STDDEV,0.53316 
+6.5,0,49.952,750,TOTAL_STDDEV,0.55 
+6.5,0,49.952,760,TOTAL_STDDEV,0.55 
+6.5,0,49.952,1500,TOTAL_STDDEV,0.55 
+5,0,3.0001,750,TOTAL_STDDEV,0.39 
+5,0,4.9991,750,TOTAL_STDDEV,0.39 
+5,0,20.064,750,TOTAL_STDDEV,0.55 
+5,0,49.988,750,TOTAL_STDDEV,0.55 
+5,90,3.0001,750,TOTAL_STDDEV,0.39 
+5,90,4.9991,750,TOTAL_STDDEV,0.39 
+5,90,20.064,750,TOTAL_STDDEV,0.55 
+5,90,49.988,750,TOTAL_STDDEV,0.55 
+6.5,0,3.0001,750,TOTAL_STDDEV,0.39 
+6.5,0,4.9991,750,TOTAL_STDDEV,0.39 
+6.5,0,20.064,750,TOTAL_STDDEV,0.42019 
+6.5,0,49.988,750,TOTAL_STDDEV,0.55 
+6.5,90,3.0001,750,TOTAL_STDDEV,0.39 
+6.5,90,4.9991,750,TOTAL_STDDEV,0.39 
+6.5,90,20.064,750,TOTAL_STDDEV,0.39680 
+6.5,90,49.988,750,TOTAL_STDDEV,0.55 
+8,0,3.0001,750,TOTAL_STDDEV,0.39 
+8,0,4.9991,750,TOTAL_STDDEV,0.39 
+8,0,20.064,750,TOTAL_STDDEV,0.39 
+8,0,49.988,750,TOTAL_STDDEV,0.40233 
+8,90,3.0001,750,TOTAL_STDDEV,0.39 
+8,90,4.9991,750,TOTAL_STDDEV,0.39 
+8,90,20.064,750,TOTAL_STDDEV,0.39 
+8,90,49.988,750,TOTAL_STDDEV,0.41355 
+8.0,0,49.988,750,TOTAL_STDDEV,0.40233 
+6.5,90,49.988,750,TOTAL_STDDEV,0.55 
+5,0,49.988,750,TOTAL_STDDEV,0.55 
+6.5,0,2.9864,750,TOTAL_STDDEV,0.39 
+6.5,90,2.9864,750,TOTAL_STDDEV,0.39 
+6.5,0,2.9864,760,TOTAL_STDDEV,0.39 
+6.5,90,2.9864,760,TOTAL_STDDEV,0.39 
+6.5,90,2.9864,1500,TOTAL_STDDEV,0.39 
+6.5,0,2.9864,1500,TOTAL_STDDEV,0.39 
